solved overflow problem

--- a/src/index.css
+++ b/src/index.css
@@ -121,3 +121,11 @@ html {
           scrollbar-width: none;  /* Firefox */
     }
   }
+
+
+body {
+  overflow-x: hidden;
+}
+* {
+  outline: 1px solid red;
+}
